k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parkingservice
  labels:
    app: parkingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parkingservice
  template:
    metadata:
      labels:
        app: parkingservice
    spec:
      containers:
        - name: parkingservice
          image: ghcr.io/agile-software-engineering-25/team-3-backend-parking-lot-analysis:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 6
            successThreshold: 1
