k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parkingservice
  labels:
    app: parkingservice
spec:
  ingressClassName: traefik
  rules:
    - host: sau-portal.de
      http:
        paths:
          - path: /api/parkingservice
            pathType: Prefix
            backend:
              service:
                name: parkingservice
                port:
                  number: 8080
